--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,10 +1,15 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/flutter
-FLUTTER_APPLICATION_PATH=/Users/sheldon/Documents/TYFlutterDemo
-FLUTTER_TARGET=/Users/sheldon/Documents/TYFlutterDemo/lib/main.dart
+FLUTTER_ROOT=/Users/sheldon/opt/flutter
+FLUTTER_APPLICATION_PATH=/Users/sheldon/Codes/TYFlutterDemo
+COCOAPODS_PARALLEL_CODE_SIGN=true
+FLUTTER_TARGET=/Users/sheldon/Codes/TYFlutterDemo/lib/main.dart
 FLUTTER_BUILD_DIR=build
-SYMROOT=${SOURCE_ROOT}/../build/ios
-FLUTTER_FRAMEWORK_DIR=/flutter/bin/cache/artifacts/engine/ios
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
+EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
+EXCLUDED_ARCHS[sdk=iphoneos*]=armv7
+DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
+DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
+TREE_SHAKE_ICONS=false
+PACKAGE_CONFIG=/Users/sheldon/Codes/TYFlutterDemo/.dart_tool/package_config.json
