--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   english_words: ^4.0.0
   flutter_staggered_grid_view: ^0.6.0
+  fluttertoast: ^8.1.2
 
 dev_dependencies:
   flutter_test:
