--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   english_words: ^4.0.0
   flutter_staggered_grid_view: ^0.6.0
   fluttertoast: ^8.1.2
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
