--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.0
   fluttertoast: ^8.1.2
   qr_code_scanner: ^1.0.1
+  device_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
