添加视频播放功能

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   fluttertoast: ^8.1.2
   qr_code_scanner: ^1.0.1
   device_info_plus: ^8.0.0
+  video_player: ^2.5.1
 
 dev_dependencies:
   flutter_test:
