--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   device_info_plus: ^8.0.0
   video_player: ^2.5.1
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
