--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   device_info_plus: ^8.0.0
   video_player: ^2.5.1
   dio: ^4.0.6
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
