--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   video_player: ^2.5.1
   dio: ^4.0.6
   provider: ^6.0.5
+  image_picker: ^0.8.6+4
+  photo_view: ^0.14.0
+  screenshot: ^1.3.0
+  permission_handler: ^8.3.0
+  image_gallery_saver: '^1.7.1'
 
 dev_dependencies:
   flutter_test:
